manifests/0000_25_openshift-controller-manager-operator_00_network-policy-operator.yaml
# Network policy for the openshift-controller-manager-operator pod.
#
# Egress:
# - Allow all egress to support communication with the Kubernetes API server,
#   whose IP address and port are not known at manifest time. This implicitly
#   covers DNS resolution as well.
#
# Ingress:
# - Allow ingress on port 8443 (metrics) for metrics scraping.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-operator
  namespace: openshift-controller-manager-operator
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
spec:
  podSelector:
    matchLabels:
      app: openshift-controller-manager-operator
  ingress:
  - ports:
    - protocol: TCP
      port: 8443
  egress:
  - {}                                          # Allow all egress for API server access
  policyTypes:
  - Ingress
  - Egress
